--- a/music_api/templates/registration/login.html
+++ b/music_api/templates/registration/login.html
@@ -56,8 +56,8 @@
                 </label>
             </div>
 
-            <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-ruby-solid">Войти</button>
+            <div class="d-grid gap-2 mt-5">
+                <button type="submit" class="btn btn-ruby-solid shadow-sm">Войти</button>
             </div>
 
             <input type="hidden" name="next" value="{{ next }}">
