feat(ui): добавлены плавные анимации активной навигации и GSAP-появление auth-виджета

--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -197,6 +197,7 @@
     <script src="/static/js/animation/animation_home.js"></script>
     <script src="/static/js/animation/card_search_animation.js"></script>
     <script src="/static/js/animation/alert_log_animation.js"></script>
+    <script src="/static/js/animation/auth_widget_animation.js"></script>
     <script src="/static/js/animation/carousel_animation.js"></script>
     <script src="/static/js/animation/hamburger_animation.js"></script>
     <script src="/static/js/animation/radial_reveal_animation.js"></script>
