--- a/music_api/templates/registration/login.html
+++ b/music_api/templates/registration/login.html
@@ -8,10 +8,11 @@
 
 {% block content %}
 
-<div class="auth-page">
+<div class="auth-page py-5">
     <section class="auth-widget">
         <div class="auth-icon" aria-hidden="true">
             <i class="bi bi-door-open fs-1"></i>
+            <h1 class="login-title fs-2 mt-2">Войти</h1>
         </div>
         {% if form.errors %}
             <div class="alert alert-danger alert-login">
