--- a/music_api/templates/registration/signup.html
+++ b/music_api/templates/registration/signup.html
@@ -8,12 +8,12 @@
 
 {% block content %}
 
-<div class="signup-page">
+<div class="signup-page py-4">
     <section class="signup-widget">
         <div class="signup-icon" aria-hidden="true">
             <i class="bi bi-check-circle"></i>
         </div>
-        <h2 class="signup-title">Создать аккаунт<span class="dot">.</span></h2>
+        <h1 class="signup-title fs-2">Создать аккаунт</h1>
 
         {% if form.errors %}
             {% if form.non_field_errors %}
