--- a/static/css/pages/profile.css
+++ b/static/css/pages/profile.css
@@ -40,6 +40,7 @@
     font-size: 1.03rem;
     letter-spacing: 0.02em;
     margin-bottom: 1.3rem;
+    border-radius: 7px;
     color: #262626;
 }
 
