--- a/music_api/templates/users/profile.html
+++ b/music_api/templates/users/profile.html
@@ -13,8 +13,6 @@
     {% csrf_token %}
 
     <div class="row g-4">
-
-        <!-- LEFT -->
         <div class="col-lg-4">
             <section class="profile-widget text-center h-100">
 
@@ -44,13 +42,14 @@
             </section>
         </div>
 
-        <!-- RIGHT -->
+        
         <div class="col-lg-8">
 
             <div class="vstack gap-4">
 
                 <section class="profile-widget">
-                    <div class="profile-widget-title fs-4">Основная информация</div>
+                    <i class="bi bi-gear fs-4 text-danger"></i>
+                    <div class="profile-widget-title fs-5">Основная информация</div>
 
                     <div class="row g-3">
                         <div class="col-md-6 label-profile">
@@ -76,7 +75,8 @@
 
 
                 <section class="profile-widget">
-                    <div class="profile-widget-title fs-4">Дополнительно</div>
+                    <i class="bi bi-gear fs-4 text-danger"></i>
+                    <div class="profile-widget-title fs-5">Дополнительно</div>
 
                     <div class="row g-3">
                         <div class="col-md-6">
