--- a/music_api/templates/users/playlists.html
+++ b/music_api/templates/users/playlists.html
@@ -66,7 +66,7 @@
 
         {% else %}
             <div class="alert alert-secondary mb-0">
-                You have no liked tracks yet.
+                У вас пока нет избранных треков.
             </div>
         {% endif %}
 
