--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -203,6 +203,8 @@
     <script src="/static/js/animation/radial_reveal_animation.js"></script>
     <script src="/static/js/animation/spinner_animation.js"></script>
     <script src="/static/js/animation/neon_search_border.js"></script>
+    <script src="/static/js/animation/profile_stagger_animation.js"></script>
+    <script src="/static/js/animation/playlist_stagger_animation.js"></script>
 
     <!-- Фичи сайта (modules/features) -->
     <script src="/static/js/features/trending.js"></script>
