--- a/music_api/templates/registration/signup.html
+++ b/music_api/templates/registration/signup.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 <div class="signup-page py-4">
-    <section class="signup-widget">
+    <section class="signup-widget pre-animation">
         <div class="signup-icon" aria-hidden="true">
             <i class="bi bi-check-circle"></i>
         </div>
