--- a/static/css/animations.css
+++ b/static/css/animations.css
@@ -26,3 +26,8 @@
 .input-search:-webkit-autofill:active {
     transition: background-color 5000s ease-in-out 0s;
 }
+
+.pre-animate {
+    opacity: 0;
+    transform: scale(0.8);
+}
