--- a/music_api/templates/registration/login.html
+++ b/music_api/templates/registration/login.html
@@ -11,7 +11,7 @@
 <div class="auth-page py-5">
     <section class="auth-widget pre-animation">
         <div class="auth-icon" aria-hidden="true">
-            <i class="bi bi-door-open fs-1"></i>
+            <i class="bi bi-door-open"></i>
             <h1 class="login-title fs-2 mt-2">Войти</h1>
         </div>
         {% if form.errors %}
