--- a/static/css/pages/auth.css
+++ b/static/css/pages/auth.css
@@ -32,6 +32,7 @@
     line-height: 1;
     text-align: center;
     margin-bottom: 0.75rem;
+    font-size: 2.7rem;
 }
 
 .auth-widget .form-control {
