feat(admin): настроена тема Django Admin и добавлен отчёт по трекам в плейлистах пользователей

--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -135,7 +135,7 @@
                         </li>
                         {% endif %}
                     </ul>
-                    <form class="d-flex form-search w-100 w-lg-75" role="search" autocomplete="on"
+                    <form class="d-flex form-search ms-lg-3 w-100" role="search" autocomplete="on"
                         action="{% url 'search_page' %}" method="get">
                         <div class="position-relative flex-grow-1">
                             <input class="form-control me-2 input-search input-search-icon" type="text" name="q"
