--- a/music_api/templates/users/profile.html
+++ b/music_api/templates/users/profile.html
@@ -11,6 +11,11 @@
 <div class="container py-4">
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
+    {% if form.non_field_errors %}
+        <div class="alert alert-danger">
+            {{ form.non_field_errors }}
+        </div>
+    {% endif %}
 
     <div class="row g-4 pre-animation" id="blcok-avatar">
         <div class="col-lg-4">
@@ -55,13 +60,21 @@
                         <div class="col-md-6 label-profile">
                             <label class="form-label fs-5">Имя:</label>
                             <input type="text" class="form-control"
-                                   value="{{ user.username }}" readonly>
+                                   name="username"
+                                   value="{{ form.username.value|default:'' }}">
+                            {% if form.username.errors %}
+                                <div class="text-danger small mt-1">{{ form.username.errors|join:", " }}</div>
+                            {% endif %}
                         </div>
 
                         <div class="col-md-6">
                             <label class="form-label fs-5">Эл. почта:</label>
                             <input type="email" class="form-control"
-                                   value="{{ user.email }}" readonly>
+                                   name="email"
+                                   value="{{ form.email.value|default:'' }}">
+                            {% if form.email.errors %}
+                                <div class="text-danger small mt-1">{{ form.email.errors|join:", " }}</div>
+                            {% endif %}
                         </div>
                     </div>
 
@@ -69,7 +82,10 @@
                         <label class="form-label fs-5">О себе:</label>
                         <textarea class="form-control"
                                   name="bio"
-                                  rows="3">{{ user.bio }}</textarea>
+                                  rows="3">{{ form.bio.value|default:'' }}</textarea>
+                        {% if form.bio.errors %}
+                            <div class="text-danger small mt-1">{{ form.bio.errors|join:", " }}</div>
+                        {% endif %}
                     </div>
                 </section>
 
@@ -82,14 +98,17 @@
                         <div class="col-md-6">
                             <label class="form-label fs-5">Пол:</label>
                             <select class="form-select" name="gender">
-                                <option value="">Выберите пол</option>
+                                <option value="">Не указан</option>
                                 {% for choice in user.GENDER_CHOICES %}
                                     <option value="{{ choice.0 }}"
-                                            {% if user.gender == choice.0 %}selected{% endif %}>
+                                            {% if form.gender.value == choice.0 %}selected{% endif %}>
                                         {{ choice.1 }}
                                     </option>
                                 {% endfor %}
                             </select>
+                            {% if form.gender.errors %}
+                                <div class="text-danger small mt-1">{{ form.gender.errors|join:", " }}</div>
+                            {% endif %}
                         </div>
 
                         <div class="col-md-6">
@@ -97,7 +116,10 @@
                             <input type="text"
                                    class="form-control"
                                    name="country"
-                                   value="{{ user.country }}">
+                                   value="{{ form.country.value|default:'' }}">
+                            {% if form.country.errors %}
+                                <div class="text-danger small mt-1">{{ form.country.errors|join:", " }}</div>
+                            {% endif %}
                         </div>
                     </div>
 
@@ -107,7 +129,10 @@
                             <input type="date"
                                    class="form-control"
                                    name="birth_date"
-                                   value="{{ user.birth_date|date:'Y-m-d' }}">
+                                   value="{{ form.birth_date.value|default:'' }}">
+                            {% if form.birth_date.errors %}
+                                <div class="text-danger small mt-1">{{ form.birth_date.errors|join:", " }}</div>
+                            {% endif %}
                         </div>
 
                         <div class="col-md-6">
@@ -115,14 +140,48 @@
                                 <input class="form-check-input"
                                        type="checkbox"
                                        name="is_public_favorites"
-                                       {% if user.is_public_favorites %}checked{% endif %}>
+                                       {% if form.is_public_favorites.value %}checked{% endif %}>
                                 <label class="form-check-label">
                                     Публичное избранное
                                 </label>
                             </div>
+                            {% if form.is_public_favorites.errors %}
+                                <div class="text-danger small mt-1">{{ form.is_public_favorites.errors|join:", " }}</div>
+                            {% endif %}
                         </div>
                     </div>
 
+                </section>
+
+                <section class="profile-widget pre-animation" id="block-password">
+                    <i class="bi bi-shield-lock fs-4 text-danger"></i>
+                    <div class="profile-widget-title fs-5">Смена пароля</div>
+
+                    <div class="row g-3">
+                        <div class="col-md-4">
+                            <label class="form-label fs-6">Текущий пароль:</label>
+                            <input type="password" class="form-control" name="current_password" autocomplete="current-password">
+                            {% if form.current_password.errors %}
+                                <div class="text-danger small mt-1">{{ form.current_password.errors|join:", " }}</div>
+                            {% endif %}
+                        </div>
+
+                        <div class="col-md-4">
+                            <label class="form-label fs-6">Новый пароль:</label>
+                            <input type="password" class="form-control" name="new_password" autocomplete="new-password">
+                            {% if form.new_password.errors %}
+                                <div class="text-danger small mt-1">{{ form.new_password.errors|join:", " }}</div>
+                            {% endif %}
+                        </div>
+
+                        <div class="col-md-4">
+                            <label class="form-label fs-6">Подтверждение пароля:</label>
+                            <input type="password" class="form-control" name="new_password_confirm" autocomplete="new-password">
+                            {% if form.new_password_confirm.errors %}
+                                <div class="text-danger small mt-1">{{ form.new_password_confirm.errors|join:", " }}</div>
+                            {% endif %}
+                        </div>
+                    </div>
                 </section>
 
                 <div class="text-center pt-3">
